library/general/requiredannotations/samples/all-must-have-certain-set-of-annotations/example_allowed.yaml
apiVersion: v1
kind: Service
metadata:
  name: allowed-service
  annotations:
    sonarqube-scan: success
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: foo
